overflow issue fixed

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -2169,13 +2169,6 @@ a.choice-box:hover{background:url("../img/filter-icon.png") no-repeat left;borde
 .file-tabs-close-confirm-tab {background: url("../img/icon-close-circle.png") no-repeat scroll 0 0 rgba(0, 0, 0, 0) !important;cursor: pointer;float: right;height: 24px;padding: 0;position: absolute;right:-25px;top:-25px;width: 24px;z-index: 9;border-radius:50%;border:2px solid #fff;} */
 /**table-styles**/
 
-/*Clearfix*/
-.clearfix:after {content: ".";display: block;clear: both;visibility: hidden;line-height: 0;height: 0;}
-.clearfix {display: inline-block;}
-html[xmlns] .clearfix {display: block;}
-* html .clearfix {height: 1%;}
-/*End*/
-
 .section-right {float: right;}
 .form-cont {float: left;margin:7px 0 0 0;}
 .form-cont label {float: left;font-size: 11px !important;font-weight: normal !important;margin: 0 10px 0 0;line-height: 32px !important;}
@@ -2198,3 +2191,12 @@ button.positive:hover{opacity:0.8;background:#4b6fb9;border:1px solid #274686;}
 .blockUI.blockMsg.blockPage {
     overflow: scroll !important;
 }
+.blockUI.blockMsg.blockPage.assign-user {
+	overflow: visible !important;
+}
+/*Clearfix*/
+.clearfix:after {content: ".";display: block;clear: both;visibility: hidden;line-height: 0;height: 0;}
+.clearfix {display: inline-block;}
+html[xmlns] .clearfix {display: block;}
+* html .clearfix {height: 1%;}
+/*End*/
